--- a/WebApiAerolinea/appsettings.Development.json
+++ b/WebApiAerolinea/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Error",
       "Microsoft.AspNetCore": "Error"
     }
+  },
+  "AzureServiceBus": {
+    "ConnectionString": "agregarConexionAqui"
   }
 }
