--- a/WebApiAerolinea/appsettings.json
+++ b/WebApiAerolinea/appsettings.json
@@ -2,7 +2,9 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Error",
+      "Microsoft.EntityFrameworkCore.Query": "Error" // Evita logs de las consultas EF
     }
   },
   "AllowedHosts": "*",
